@@ -55,10 +55,9 @@
     "debug": "2.2.0",
     "envify": "3.4.0",
     "es6-promise": "2.1.1",
-    "extend": "2.0.1",
-    "foreach": "2.0.5",
     "inherits": "2.0.1",
     "load-script": "1.0.0",
+    "lodash-compat": "3.9.3",
     "semver": "4.3.6",
     "tunnel-agent": "0.4.0"
   },
@@ -85,7 +84,6 @@
     "json": "9.0.3",
     "json-loader": "0.5.2",
     "lodash": "3.9.3",
-    "lodash-compat": "3.9.3",
     "morgan": "1.5.3",
     "mversion": "1.10.0",
     "node-libs-browser": "0.5.2",
