@@ -13,11 +13,11 @@ var JSONPRequest = require('../JSONP-request');
 window.algoliasearch = require('./algoliasearch');
 
 function algoliasearch(applicationID, apiKey, opts) {
-  var extend = require('extend');
+  var cloneDeep = require('lodash-compat/lang/cloneDeep');
 
   var getDocumentProtocol = require('../get-document-protocol');
 
-  opts = extend(true, {}, opts) || {};
+  opts = cloneDeep(opts || {});
 
   if (opts.protocol === undefined) {
     opts.protocol = getDocumentProtocol();
