@@ -12,11 +12,11 @@ var inlineHeaders = require('../inline-headers');
 var JSONPRequest = require('../JSONP-request');
 
 function algoliasearch(applicationID, apiKey, opts) {
-  var extend = require('extend');
+  var cloneDeep = require('lodash-compat/lang/cloneDeep');
 
   var getDocumentProtocol = require('../get-document-protocol');
 
-  opts = extend(true, {}, opts) || {};
+  opts = cloneDeep(opts || {});
 
   if (opts.protocol === undefined) {
     opts.protocol = getDocumentProtocol();
